# facerec

./: .gitignore
facerec/: CMakeLists.txt  cmake_install.cmake
facerec/dlib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  dlib-1.pc  dlib.sln  dlib.vcxproj  dlib.vcxproj.filters
facerec/dlib/config/: dlibConfig.cmake
facerec/dlib/neon_test_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  neon_test.sln  neon_test.vcxproj  neon_test.vcxproj.filters
facerec/dlib/neon_test_build/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
facerec/dlib/neon_test_build/neon_test.dir/Debug/neon_test.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
facerec/examples/: CMakeLists.txt  SimplePocoHandler.h  dnn_face_recognition_ex.cpp  restore.sh  videodump.sql  webcam_face_pose_ex.cpp
facerec/examples/build_kdev/: CMakeCache.txt  Makefile  build_kdev.kdev4  cmake_install.cmake  dnn_face_recognition.bat  examples.kdevelop  examples.kdevelop.filelist  examples.kdevses  webcam_face_pose_ex.bat
facerec/examples/build_kdev/AMQP-CPP-2.1.4/: Makefile  amqp-cpp.kdevelop  amqp-cpp.kdevelop.filelist  amqp-cpp.kdevses  cmake_install.cmake
facerec/examples/build_kdev/AMQP-CPP-2.1.4/include/: Makefile  cmake_install.cmake
facerec/examples/build_kdev/AMQP-CPP-2.1.4/src/: Makefile  cmake_install.cmake
facerec/examples/build_kdev/dlib_build/: Makefile  cmake_install.cmake  dlib.kdevelop
facerec/examples/build_kdev/dlib_build/cuda_test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
facerec/examples/build_kdev/dlib_build/cudnn_test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
facerec/examples/npd/: npddetect.cpp  npdmodel.cpp
facerec/examples/resnet/: dlib_resnet.h
